--- a/dvaDemo/src/views/page.scss
+++ b/dvaDemo/src/views/page.scss
@@ -145,7 +145,9 @@ footer{
 }
 .contentbox>.ollist>li:nth-child(1){
   border-bottom: 1px solid #ccc;
-  margin-top:3px;
+}
+.contentbox>.ollist>li:nth-child(3){
+  border-bottom: 1px solid #ccc;
 }
 .money{
   color: #f00;
