--- a/dvaDemo/src/components/deloage/Deloage.css
+++ b/dvaDemo/src/components/deloage/Deloage.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, .5);
-    position: absolute;
+    position: fixed;
     top:0;
     left:0;
     z-index: 200;
